Fix accessible and dark mode for mobile TOC toggle

--- a/_sass/components/_mobile-toc.scss
+++ b/_sass/components/_mobile-toc.scss
@@ -9,9 +9,13 @@
     }
 
     .toggle-toc {
+        @include themer(color, (
+            'dark': $site-ui-brand-dark,
+            'light': $site-ui-brand-light,
+        ));
+
         background-color: transparent;
         border: none;
-        color: #007bff;
         cursor: pointer;
         padding: 0;
 
